# cmake_test

./: CMakeLists.txt
sub1/: CMakeLists.txt  main.c
sub2/: .#gen.sh  CMakeLists.txt  gen.sh  main.c
